--- a/CSharp/Platform/TNetTest/TNetTest.csproj
+++ b/CSharp/Platform/TNetTest/TNetTest.csproj
@@ -51,7 +51,6 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TcpListenerTest.cs" />
     <Compile Include="TServiceTest.cs" />
   </ItemGroup>
@@ -68,6 +67,9 @@
       <Project>{b42d431a-3a54-4649-942a-c5356d7f9fbc}</Project>
       <Name>TNet</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
