1.增加一个登录消息 2.Network程序集移动到Common中

--- a/CSharp/Game/Controller/Controller.csproj
+++ b/CSharp/Game/Controller/Controller.csproj
@@ -55,10 +55,10 @@
     <Compile Include="ConfigCategory\UnitCategory.cs" />
     <Compile Include="Action\BuffTimeoutAction.cs" />
     <Compile Include="Event\AfterAddBuff.cs" />
-    <Compile Include="Message\CMsgLogin.cs" />
+    <Compile Include="MessageType.cs" />
+    <Compile Include="Message\CMsgLoginEvent.cs" />
     <Compile Include="NodeType.cs" />
     <Compile Include="Factory\UnitFactory.cs" />
-    <Compile Include="UnitType.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
