--- a/CSharp/Game/Model/Model.csproj
+++ b/CSharp/Game/Model/Model.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Component\ChannelUnitInfoComponent.cs" />
     <Compile Include="Component\ActorComponent.cs" />
     <Compile Include="Component\BehaviorTreeComponent.cs" />
     <Compile Include="BehaviorTree\BehaviorTree.cs" />
@@ -53,7 +54,7 @@
     <Compile Include="BehaviorTree\Node.cs" />
     <Compile Include="BehaviorTree\NodeAttribute.cs" />
     <Compile Include="Buff.cs" />
-    <Compile Include="Component\ServiceComponent.cs" />
+    <Compile Include="Component\NetworkComponent.cs" />
     <Compile Include="Component\BuffComponent.cs" />
     <Compile Include="Component\ConfigComponent.cs" />
     <Compile Include="Component\EventComponent.cs" />
@@ -72,6 +73,7 @@
     <Compile Include="Config\GlobalConfig.cs" />
     <Compile Include="Config\NodeConfig.cs" />
     <Compile Include="Unit.cs" />
+    <Compile Include="UnitType.cs" />
     <Compile Include="World.cs" />
     <Compile Include="EventAttribute.cs" />
   </ItemGroup>
@@ -82,10 +84,6 @@
     <ProjectReference Include="..\..\Platform\Common\Common.csproj">
       <Project>{19f8f043-1f99-4550-99df-dea5c7d77e55}</Project>
       <Name>Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Platform\Network\Network.csproj">
-      <Project>{3bd499ff-3c34-4920-8b21-c55fba580843}</Project>
-      <Name>Network</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Platform\TNet\TNet.csproj">
       <Project>{b42d431a-3a54-4649-942a-c5356d7f9fbc}</Project>
