1.linux上编译enet OK 2.linux上UNetTest要调用libENet.so,需要设置LD_LIBRARY_PATH以便查找libENet.so 3.UNetTest仍然crash

--- a/CSharp/Platform/ENet/ENet.vcxproj
+++ b/CSharp/Platform/ENet/ENet.vcxproj
@@ -104,26 +104,26 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="callbacks.cc" />
-    <ClCompile Include="compress.cc" />
-    <ClCompile Include="host.cc" />
-    <ClCompile Include="list.cc" />
-    <ClCompile Include="packet.cc" />
-    <ClCompile Include="peer.cc" />
-    <ClCompile Include="protocol.cc" />
-    <ClCompile Include="unix.cc" />
-    <ClCompile Include="win32.cc" />
+    <ClCompile Include="callbacks.c" />
+    <ClCompile Include="compress.c" />
+    <ClCompile Include="host.c" />
+    <ClCompile Include="list.c" />
+    <ClCompile Include="packet.c" />
+    <ClCompile Include="peer.c" />
+    <ClCompile Include="protocol.c" />
+    <ClCompile Include="unix.c" />
+    <ClCompile Include="win32.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="callbacks.h" />
-    <ClInclude Include="enet.h" />
-    <ClInclude Include="list.h" />
-    <ClInclude Include="protocol.h" />
-    <ClInclude Include="time.h" />
-    <ClInclude Include="types.h" />
-    <ClInclude Include="unix.h" />
-    <ClInclude Include="utility.h" />
-    <ClInclude Include="win32.h" />
+    <ClInclude Include="enet\callbacks.h" />
+    <ClInclude Include="enet\enet.h" />
+    <ClInclude Include="enet\list.h" />
+    <ClInclude Include="enet\protocol.h" />
+    <ClInclude Include="enet\time.h" />
+    <ClInclude Include="enet\types.h" />
+    <ClInclude Include="enet\unix.h" />
+    <ClInclude Include="enet\utility.h" />
+    <ClInclude Include="enet\win32.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
