修复一个bug,ENet ENetPacket.DataLength类型为size_t, linux64位平台上是8字节,C#可以使用Intptr表示size_t

--- a/CSharp/App/Editor/NLog.config
+++ b/CSharp/App/Editor/NLog.config
@@ -8,6 +8,6 @@
 			layout="${longdate} ${threadid:padCharacter=0:padding=4:fixedLength=true} ${message}" />
 	</targets>
 	<rules>
-		<logger name="*" minlevel="Trace" writeTo="file" />
+		<logger name="*" minlevel="Debug" writeTo="file" />
 	</rules>
 </nlog>
