--- a/CSharp/Tests/ModelTest/ModelTest.csproj
+++ b/CSharp/Tests/ModelTest/ModelTest.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7D5B90DF-43AC-42B8-9A52-2B985BC42A5C}</ProjectGuid>
+    <ProjectGuid>{DEF89A61-8AC7-4CCD-80B8-FC6AA2571E35}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Controller</RootNamespace>
-    <AssemblyName>Controller</AssemblyName>
+    <RootNamespace>ModelTest</RootNamespace>
+    <AssemblyName>ModelTest</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -33,34 +33,32 @@
     <Reference Include="MongoDB.Bson">
       <HintPath>..\..\packages\mongocsharpdriver.1.10.0-rc1\lib\net35\MongoDB.Bson.dll</HintPath>
     </Reference>
+    <Reference Include="MongoDB.Driver">
+      <HintPath>..\..\packages\mongocsharpdriver.1.10.0-rc1\lib\net35\MongoDB.Driver.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.framework">
+      <HintPath>..\..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Action\BuffTimeoutAction.cs" />
-    <Compile Include="Action\MessageAction.cs" />
-    <Compile Include="BehaviorTreeNode\Not.cs" />
-    <Compile Include="BehaviorTreeNode\Selector.cs" />
-    <Compile Include="BehaviorTreeNode\Sequence.cs" />
-    <Compile Include="ConfigCategory\BuffCategory.cs" />
-    <Compile Include="ConfigCategory\GlobalCategory.cs" />
-    <Compile Include="ConfigCategory\NodeCategory.cs" />
-    <Compile Include="ConfigCategory\UnitCategory.cs" />
-    <Compile Include="Event\AfterAddBuff.cs" />
-    <Compile Include="Factory\UnitFactory.cs" />
-    <Compile Include="MessageType.cs" />
-    <Compile Include="Message\CMsgLoginEvent.cs" />
-    <Compile Include="NodeType.cs" />
+    <Compile Include="MongoDBTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Game\Model\Model.csproj">
+      <Project>{0608C0C1-F584-4092-AAF9-1E99A78E3703}</Project>
+      <Name>Model</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Platform\Common\Common.csproj">
       <Project>{F06B995E-6508-4C5C-A396-554316C9215D}</Project>
       <Name>Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Model\Model.csproj">
-      <Project>{0608C0C1-F584-4092-AAF9-1E99A78E3703}</Project>
-      <Name>Model</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
