--- a/CSharp/Tests/UNetTest/UNetTest.csproj
+++ b/CSharp/Tests/UNetTest/UNetTest.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7D5B90DF-43AC-42B8-9A52-2B985BC42A5C}</ProjectGuid>
+    <ProjectGuid>{47A7404D-F501-43C5-8183-4B4E9E8C24B2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Controller</RootNamespace>
-    <AssemblyName>Controller</AssemblyName>
+    <RootNamespace>UNetTest</RootNamespace>
+    <AssemblyName>UNetTest</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,37 +30,24 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MongoDB.Bson">
-      <HintPath>..\..\packages\mongocsharpdriver.1.10.0-rc1\lib\net35\MongoDB.Bson.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="nunit.framework">
+      <HintPath>..\..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Action\BuffTimeoutAction.cs" />
-    <Compile Include="Action\MessageAction.cs" />
-    <Compile Include="BehaviorTreeNode\Not.cs" />
-    <Compile Include="BehaviorTreeNode\Selector.cs" />
-    <Compile Include="BehaviorTreeNode\Sequence.cs" />
-    <Compile Include="ConfigCategory\BuffCategory.cs" />
-    <Compile Include="ConfigCategory\GlobalCategory.cs" />
-    <Compile Include="ConfigCategory\NodeCategory.cs" />
-    <Compile Include="ConfigCategory\UnitCategory.cs" />
-    <Compile Include="Event\AfterAddBuff.cs" />
-    <Compile Include="Factory\UnitFactory.cs" />
-    <Compile Include="MessageType.cs" />
-    <Compile Include="Message\CMsgLoginEvent.cs" />
-    <Compile Include="NodeType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UServiceTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Platform\Common\Common.csproj">
       <Project>{F06B995E-6508-4C5C-A396-554316C9215D}</Project>
       <Name>Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Model\Model.csproj">
-      <Project>{0608C0C1-F584-4092-AAF9-1E99A78E3703}</Project>
-      <Name>Model</Name>
+    <ProjectReference Include="..\..\Platform\UNet\UNet.csproj">
+      <Project>{D3CEA64F-4D75-4DC9-B139-8D12EB4ACF8E}</Project>
+      <Name>UNet</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
