取消跨平台库对nuget的依赖,增加一个Nuget程序集专门用来下载Nuget库

--- a/CSharp/Exe/Profile/Profile.csproj
+++ b/CSharp/Exe/Profile/Profile.csproj
@@ -48,17 +48,17 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Tests\TNetTest\TNetTest.csproj">
-      <Project>{1888D319-0495-43F3-BA8D-163EC20D9437}</Project>
-      <Name>TNetTest</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Tests\UNetTest\UNetTest.csproj">
-      <Project>{47A7404D-F501-43C5-8183-4B4E9E8C24B2}</Project>
-      <Name>UNetTest</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\Platform\Common\Common.csproj">
       <Project>{F06B995E-6508-4C5C-A396-554316C9215D}</Project>
       <Name>Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Test\TNetTest\TNetTest.csproj">
+      <Project>{1888D319-0495-43F3-BA8D-163EC20D9437}</Project>
+      <Name>TNetTest</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Test\UNetTest\UNetTest.csproj">
+      <Project>{47A7404D-F501-43C5-8183-4B4E9E8C24B2}</Project>
+      <Name>UNetTest</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
